--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
   assets:
     - assets/images/iu_splash.jpg
     - assets/images/profile.png
+    - assets/images/flutter_logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
