--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   carousel_slider: ^2.3.1
   cached_network_image: ^2.3.3
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
