--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@
 .history
 .svn/
 
+# ios dir
+ios
+ios/Flutter/
+ios/Runner.xcodeproj/
+ios/Runner.xcworkspace/
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -45,12 +51,3 @@ pubspec.lock
 .vscode
 
 android/gradle.properties
-
-ios
-ios/*
-ios/Flutter
-ios/Flutter/*
-ios/Runner.xcodeproj
-ios/Runner.xcodeproj/*
-ios/Runner.xcworkspace
-ios/Runner.xcworkspace/*
