--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,6 @@
 .history
 .svn/
 
-# ios dir
-ios
-ios/Flutter/
-ios/Runner.xcodeproj/
-ios/Runner.xcworkspace/
-
 # IntelliJ related
 *.iml
 *.ipr
@@ -51,3 +45,12 @@ pubspec.lock
 .vscode
 
 android/gradle.properties
+# ios dir
+ios
+ios/Flutter/
+ios/Runner.xcodeproj/
+ios/Runner.xcworkspace/
+ios/Flutter/Debug.xcconfig
+ios/Flutter/Release.xcconfig
+ios/Runner.xcodeproj/project.pbxproj
+ios/Runner.xcworkspace/contents.xcworkspacedata
